# glestest

./: .gitignore  Cargo.toml  build.gradle  deploy.sh  pull.sh  run.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mersive/glconvert/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mersive/glconvert/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/resources/: 1280x720.raw  1920x1080.raw  640x360.raw  640x480.raw  thanksgiving.raw
app/src/test/java/com/mersive/glconvert/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  build.rs  run.sh
rust/src/: gl_convert.rs  lib.rs  test_file.rs
src/: main.rs
