[package]
name = "glestest"
version = "0.1.0"
authors = ["Brent Gardner <bgardner@squarelabs.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
khronos-egl = "2.1.1"
rs-gles3 = { git = "https://github.com/Mersive-Technologies/rs-gles3.git", branch = "bg_gles3_link" }
anyhow = "1.0.34"
android_logger = "0.9.0"

[lib]
name = "glestest"
crate-type = ["cdylib"]
