[package]
name = "glestest"
version = "0.1.0"
authors = ["Brent Gardner <bgardner@squarelabs.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
khronos-egl = "2.1.1"
anyhow = "1.0.34"
android_logger = "0.9.0"
jni = { version = "0.10.2", default-features = false }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
gles31-sys = "0.1.1"

[lib]
name = "glestest"
crate-type = ["cdylib"]
